--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1394,7 +1394,7 @@ a {
                 </div> -->
                 <!-- 二级页多个切换 -->
                 <div class="mc-wrap mc-wrap-detail">
-                    <div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail1-1.jpg"></div>
+                    <div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail1-1.png"></div>
                 </div>
                 <div class="mc-wrap mc-wrap-back icon"></div>
             </div>
