--- a/hkhl/b2c.html
+++ b/hkhl/b2c.html
@@ -1232,7 +1232,13 @@ a {
         z-index: 11;
         font-size: 2.5rem;
     }
-
+    .scene-4 .person-lead .icon{
+        background-image: url("../images/b2c/lead_person_nohands.png");
+    }
+    .scene-4 .person-lead {
+        height: 537px;
+        width: 237px;
+    }
 
     /* stage in animate */
     .ani-0 .scene-1.start-animate .chair, .ani-0 .scene-1.start-animate .person,.ani-0 .scene-1.start-animate .msg-wrap,.ani-0 .scene-1.start-animate .msg-wrap-small{
@@ -1499,7 +1505,9 @@ a {
 </style>
 </head>
 <body>
-
+#if($!shopAttention.url && ($!shopAttention.url !="") && ($!shopAttention.url !="http://"))
+<a  href="$!shopAttention.url"></a>
+#end
 <!-- loading -->
 <div class="loading" id="J_MiLoading">
     <div class="loading-block">
@@ -1760,8 +1768,8 @@ a {
     </div>
     <!-- E scene3-->
     <!-- S scene4 -->
-    <div class="J_opaPannel pannels scene-1" data-index="0" data-first="true">
-        <div class="opa-stage stage" data-index="0" data-id="opa_stage_1" style="">
+    <div class="J_opaPannel pannels scene-4" data-index="3" data-first="true">
+        <div class="opa-stage stage" data-index="3" data-id="opa_stage_4" style="">
             <!-- S logo -->
             <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn logo">
                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
@@ -1807,7 +1815,9 @@ a {
             <!-- S person -->
             <div class="mc mc-image delay_0_0s person-lead">
                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
-                    <div class="icon"></div>
+                    <div class="icon icon-body"></div>
+                    <div class="icon icon-left-hand"></div>
+                    <div class="icon icon-right-hand"></div>
                 </div>
             </div>
             <!-- E person -->
